flux/apps/filebrowser-quantum/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: filebrowser
  name: filebrowser
  namespace: extra-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      containers:
        - name: filebrowser
          image: ghcr.io/gtsteffaniak/filebrowser:stable
          ports:
          - containerPort: 80
          volumeMounts:
            - mountPath: /home/filebrowser/data
              name: filebrowser-config
            - mountPath: /mnt/media
              name: filebrowser-media
            - mountPath: /mnt/documents
              name: filebrowser-documents
            - mountPath: /mnt/k3s-config
              name: filebrowser-data
      volumes:
        - name: filebrowser-config
          persistentVolumeClaim:
            claimName: filebrowser-config
        - name: filebrowser-media
          persistentVolumeClaim:
            claimName: filebrowser-media
        - name: filebrowser-documents
          persistentVolumeClaim:
            claimName: filebrowser-documents
        - name: filebrowser-data
          persistentVolumeClaim:
            claimName: filebrowser-data
