flux/apps/filebrowser-quantum/httproute.enc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: filebrowser
    namespace: extra-tools
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: system-addon
    hostnames:
        - ENC[AES256_GCM,data:53Td/QsWSNYl2VwFq+vsEh+ikgJOhBKAIFHDp115i745,iv:bjTXcvtAO3ZVUK4l0sksPF09zMt5gu6JdlU2OLRbjnQ=,tag:OGkW3tVym6qWMFdVZYGSZg==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          backendRefs:
            - name: filebrowser
              port: 80
sops:
    age:
        - recipient: age15kgnnd0nlu5vxerhfcrzh5y77x7efudnk74sk4d6z3zn29yltc5q25r54a
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQcW5zTklyOW9HY0hKa3VT
[...]
            rLZ2h0oNAKtdqFt9AXI4hm1z3tMv2IXRbk2Uij+cX3JH1SDMpRw+/Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-01-13T10:38:30Z"
    mac: ENC[AES256_GCM,data:Wus8W80LnNZxm53UNK20ThH79XhBOI39zJ7qor05BuwTqtnQbHuhXrPusASJ4B/oSEtwgUTPzYWC35KYqdlJivr9DllEbE1fb/DI6XYPDCx97QDwd2k4eUaqaQ82fq2jQbrE0poS8A5Hwt/PtBqAvdQiKhqK2xxWrBfnH5q3z2w=,iv:/5CeNCzs0TEMgq4A1PjVI1kJUN0IunzbbzRaQLnYDX4=,tag:O4nec4csM3geF6fe2QTpbQ==,type:str]
    encrypted_regex: hostnames|0
    version: 3.11.0
